--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,9 @@
 	%head
 		%title FRIL
 		= csrf_meta_tags
-		= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+		= stylesheet_link_tag    'application', media: 'all'
 		= stylesheet_link_tag 	 'application', 'https://fonts.googleapis.com/css?family=Open+Sans'
-		= javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+		= javascript_include_tag 'application'
 	%body
 		= render 'assets/nav'
 		= yield
