adding tabs and tabs initializer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,12 @@
     padding-top: 3.5rem;
   }
 
+  @media (min-width: 1920px) {
+    .container{
+        max-width: 1700px;
+    }
+  }
+
   abbr[title="required"] {
     display: none;
   }
