--- a/app/views/projects/_observation_fields.html.haml
+++ b/app/views/projects/_observation_fields.html.haml
@@ -1,15 +1,20 @@
 .nested-fields
+  %h3 Observación
+  %hr
+  .row
+    .col-md-12
+      = f.input :observation_detail, input_html: { class: 'form-control' }
   .row
     .col-md-6
       = f.input :action_plan, input_html: { class: 'form-control' }
     .col-md-6
-      = f.input :office_date, as: :string, input_html: { class: "datepicker", value: Time.now.strftime('%d/%m/%Y') }
+      = f.input :office_date, as: :string, input_html: { class: "datepicker" }
   .row
     .col-md-12
       = f.input :office_observation, input_html: { class: 'form-control' }
   .row
     .col-md-6
-      = f.input :due_date, as: :string, input_html: { class: "datepicker", value: Time.now.strftime('%d/%m/%Y') }
+      = f.input :due_date, as: :string, input_html: { class: "datepicker" }
     .col-md-6
       = f.input :responsible, input_html: { class: 'form-control' }
   .row
@@ -21,7 +26,7 @@
     .col-md-6
       = f.input :office_breach, input_html: { class: 'form-control' }
     .col-md-6
-      = f.input :breach_date, as: :string, input_html: { class: "datepicker", value: Time.now.strftime('%d/%m/%Y') }
+      = f.input :breach_date, as: :string, input_html: { class: "datepicker" }
   .row
     .col-md-6
       = f.input :term_second, input_html: { class: 'form-control' }
@@ -34,3 +39,4 @@
           = f.input :meet_second, input_html: { class: 'form-check-input' }
   %p
     = link_to_remove_association "Quitar observación", f, class: 'btn btn-outline-info'
+  %hr
