--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -38,7 +38,7 @@
           = f.input :report_made, input_html: { class: 'form-control' }
           = f.input :attachment, label: 'Subir reporte de cometido', input_html: { class: 'form-control-file' }
 
-      %h3 Observaciones
+      %h3 Detalles del proyecto
       %hr
       #observations
         = f.simple_fields_for :observations do |observation|
