--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,34 @@
 <br>
 <br>
-<div class="container">
-  <div class="card">
-    <div class="card-header">
-      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="center">
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <h2>Editar información</h2>
+      </div>
+      <div class="card-body">
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= f.error_notification %>
+
+          <div class="form-inputs">
+            <%= f.input :email, required: true, autofocus: true %>
+
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <% end %>
+
+            <%= f.input :password, autocomplete: "off", hint: "Dejar en blanco si no quiere realizar modificaciones", required: false %>
+            <%= f.input :password_confirmation, required: false %>
+            <%= f.input :current_password, hint: "Necesitamos tu clave actual para poder crear una contraseña nueva", required: true %>
+          </div>
     </div>
-    <div class="card-body">
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= f.error_notification %>
+    <div class="card-footer">
+      <div class="form-actions">
+        <%= f.button :submit, "Actualizar", class: 'btn btn-outline-success' %>
 
-        <div class="form-inputs">
-          <%= f.input :email, required: true, autofocus: true %>
-
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-          <% end %>
-
-          <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-          <%= f.input :password_confirmation, required: false %>
-          <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-        </div>
-  </div>
-  <div class="card-footer">
-    <div class="form-actions">
-      <%= f.button :submit, "Actualizar", class: 'btn btn-outline-success' %>
-
-  <% end %>
-    <%= link_to "Cancelar", :back, class: 'btn btn-outline-info' %>
-  </div>
+    <% end %>
+      <%= link_to "Cancelar", :back, class: 'btn btn-outline-info' %>
+    </div>
+    </div>
   </div>
 </div>
