--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,10 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">FRIL</h1>
-    <hr class="my-4">
-    <p class="lead">Fondo Regional de Iniciativa Local</p>
+<div class="container">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-3">FRIL</h1>
+      <hr class="my-4">
+      <p class="lead">Fondo Regional de Iniciativa Local</p>
+    </div>
   </div>
 </div>
 <div class="container">
