--- a/app/views/assets/_observations.html.haml
+++ b/app/views/assets/_observations.html.haml
@@ -2,7 +2,7 @@
   - @project.observations.each do |observation|
     - c.tab 'Observación' do
       .card-body
-        %h4 Seguimiento proyecto
+        %h4 Detalles del proyecto
         %hr
         .row
           .col-md-4
