--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,64 +1,63 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
  *= require bootstrap-datepicker3
  *= require_tree .
  *= require_self
  */
 
-  @import "bootstrap";
+@import "bootstrap";
 
-  body {
-    font-family: 'Open Sans', sans-serif;
-    padding-top: 3.5rem;
-    font-size: 14px;
-  }
+body {
+  font-family: 'Open Sans', sans-serif;
+  padding-top: 3.5rem;
+  font-size: 14px;
+}
 
-  @media (min-width: 1920px) {
-    .container{
-        max-width: 1700px;
-    }
-  }
+abbr[title="required"] {
+  display: none;
+}
 
-  abbr[title="required"] {
-    display: none;
+@media (min-width: 1920px) {
+  .container{
+      max-width: 1700px;
   }
+}
 
-  .table-hover{
-    font-size: 14px;
-  }
+#message {
+  position:fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  z-index:9999;
+  border-radius:0px;
+  text-align: center;
+}
 
-  .centered {
-   margin:auto;
-   max-width: 25rem;
-  }
+.table-hover{
+  font-size: 14px;
+}
 
-  .center {
-    margin: auto;
-    max-width: 40rem;
-  }
+.centered {
+ margin:auto;
+ max-width: 25rem;
+}
 
-  .footer {
-    bottom: 0;
-    width: 100%;
-  }
+.center {
+  margin: auto;
+  max-width: 40rem;
+}
 
-  nav {
-  	.navbar-brand {
-  		a {
-  			color: #A9A9A9;
-  			&:hover {
-  				text-decoration: none;
-  			}
-  		}
-  	}
-  }
+.footer {
+  bottom: 0;
+  width: 100%;
+}
+
+nav {
+	.navbar-brand {
+		a {
+			color: #A9A9A9;
+			&:hover {
+				text-decoration: none;
+			}
+		}
+	}
+}
