--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,9 @@
 	%body
 		= render 'assets/nav'
 		.container
-			- flash.each do |name, msg|
-				= content_tag :div, msg, class: "alert alert-info"
+			#message
+				- flash.each do |name, msg|
+					= content_tag :div, msg, class: "alert alert-info"
 		= render 'assets/sidebar'
 		= yield
 		= render 'assets/footer'
