--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -14,7 +14,7 @@
           %hr/
           .form-row
             .form-group.col-md-6
-              = f.input :project_name, input_html: { class: 'form-control' }
+              = f.input :name, input_html: { class: 'form-control' }
             .form-group.col-md-6
               = f.input :commune, input_html: { class: 'form-control' }
           .form-row
